docs/api/qiskit/0.33/qiskit.circuit.classicalfunction.BooleanExpression.mdx
---
title: BooleanExpression (v0.33)
description: API reference for qiskit.circuit.classicalfunction.BooleanExpression in qiskit v0.33
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.classicalfunction.BooleanExpression
---

# BooleanExpression

<Class id="qiskit.circuit.classicalfunction.BooleanExpression" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.19/qiskit/circuit/classicalfunction/boolean_expression.py" signature="BooleanExpression(expression, name=None)" modifiers="class">
  Bases: `qiskit.circuit.classicalfunction.classical_element.ClassicalElement`

  The Boolean Expression gate.

  **Parameters**

  *   **expression** (*str*) – The logical expression string.
  *   **name** (*str*) – Optional. Instruction gate name. Otherwise part of the expression is going to be used.

  ## Methods

  <span id="qiskit-circuit-classicalfunction-booleanexpression-add-decomposition" />

  ### add\_decomposition

  <Function id="qiskit.circuit.classicalfunction.BooleanExpression.add_decomposition" signature="BooleanExpression.add_decomposition(decomposition)">
    Add a decomposition of the instruction to the SessionEquivalenceLibrary.
  </Function>

  <span id="qiskit-circuit-classicalfunction-booleanexpression-assemble" />

  ### assemble

  <Function id="qiskit.circuit.classicalfunction.BooleanExpression.assemble" signature="BooleanExpression.assemble()">
    Assemble a QasmQobjInstruction
  </Function>

  <span id="qiskit-circuit-classicalfunction-booleanexpression-broadcast-arguments" />

  ### broadcast\_arguments

  <Function id="qiskit.circuit.classicalfunction.BooleanExpression.broadcast_arguments" signature="BooleanExpression.broadcast_arguments(qargs, cargs)">
    Validation and handling of the arguments and its relationship.

    For example, `cx([q[0],q[1]], q[2])` means `cx(q[0], q[2]); cx(q[1], q[2])`. This method yields the arguments in the right grouping. In the given example:

    ```python
    in: [[q[0],q[1]], q[2]],[]
    outs: [q[0], q[2]], []
          [q[1], q[2]], []
    ```

    The general broadcasting rules are:

    > *   If len(qargs) == 1:
    >
    >     ```python
    >     [q[0], q[1]] -> [q[0]],[q[1]]
    >     ```
    >
    > *   If len(qargs) == 2:
    >
    >     ```python
    >     [[q[0], q[1]], [r[0], r[1]]] -> [q[0], r[0]], [q[1], r[1]]
    >     [[q[0]], [r[0], r[1]]]       -> [q[0], r[0]], [q[0], r[1]]
    >     [[q[0], q[1]], [r[0]]]       -> [q[0], r[0]], [q[1], r[0]]
    >     ```
    >
    > *   If len(qargs) >= 3:
    >
    >     ```python
    >     [q[0], q[1]], [r[0], r[1]],  ...] -> [q[0], r[0], ...], [q[1], r[1], ...]
    >     ```

    **Parameters**

    *   **qargs** (`List`) – List of quantum bit arguments.
    *   **cargs** (`List`) – List of classical bit arguments.

    **Return type**

    `Tuple`\[`List`, `List`]

    **Returns**

    A tuple with single arguments.

    **Raises**

    **CircuitError** – If the input is not valid. For example, the number of arguments does not match the gate expectation.
  </Function>

  <span id="qiskit-circuit-classicalfunction-booleanexpression-c-if" />

  ### c\_if

  <Function id="qiskit.circuit.classicalfunction.BooleanExpression.c_if" signature="BooleanExpression.c_if(classical, val)">
    Set a classical equality condition on this instruction between the register or cbit `classical` and value `val`.

    <Admonition title="Note" type="note">
      This is a setter method, not an additive one. Calling this multiple times will silently override any previously set condition; it does not stack.
    </Admonition>
  </Function>

  <span id="qiskit-circuit-classicalfunction-booleanexpression-control" />

  ### control

  <Function id="qiskit.circuit.classicalfunction.BooleanExpression.control" signature="BooleanExpression.control(num_ctrl_qubits=1, label=None, ctrl_state=None)">
    Return controlled version of gate. See [`ControlledGate`](qiskit.circuit.ControlledGate "qiskit.circuit.ControlledGate") for usage.

    **Parameters**

    *   **num\_ctrl\_qubits** (`int`) – number of controls to add to gate (default=1)
    *   **label** (`Optional`\[`str`]) – optional gate label
    *   **ctrl\_state** (`Union`\[`int`, `str`, `None`]) – The control state in decimal or as a bitstring (e.g. ‘111’). If None, use 2\*\*num\_ctrl\_qubits-1.

    **Returns**

    Controlled version of gate. This default algorithm uses num\_ctrl\_qubits-1 ancillae qubits so returns a gate of size num\_qubits + 2\*num\_ctrl\_qubits - 1.

    **Return type**

    [qiskit.circuit.ControlledGate](qiskit.circuit.ControlledGate "qiskit.circuit.ControlledGate")

    **Raises**

    **QiskitError** – unrecognized mode or invalid ctrl\_state
  </Function>

  <span id="qiskit-circuit-classicalfunction-booleanexpression-copy" />

  ### copy

  <Function id="qiskit.circuit.classicalfunction.BooleanExpression.copy" signature="BooleanExpression.copy(name=None)">
    Copy of the instruction.

    **Parameters**

    **name** (*str*) – name to be given to the copied circuit, if None then the name stays the same.

    **Returns**

    **a copy of the current instruction, with the name**

    updated if it was provided

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="qiskit-circuit-classicalfunction-booleanexpression-from-dimacs-file" />

  ### from\_dimacs\_file

  <Function id="qiskit.circuit.classicalfunction.BooleanExpression.from_dimacs_file" signature="BooleanExpression.from_dimacs_file(filename)" modifiers="classmethod">
    Create a BooleanExpression from the string in the DIMACS format. :type filename: `str` :param filename: A file in DIMACS format.

    **Returns**

    A gate for the input string

    **Return type**

    [BooleanExpression](qiskit.circuit.classicalfunction.BooleanExpression "qiskit.circuit.classicalfunction.BooleanExpression")

    **Raises**

    **FileNotFoundError** – If filename is not found.
  </Function>

  <span id="qiskit-circuit-classicalfunction-booleanexpression-inverse" />

  ### inverse

  <Function id="qiskit.circuit.classicalfunction.BooleanExpression.inverse" signature="BooleanExpression.inverse()">
    Invert this instruction.

    If the instruction is composite (i.e. has a definition), then its definition will be recursively inverted.

    Special instructions inheriting from Instruction can implement their own inverse (e.g. T and Tdg, Barrier, etc.)

    **Returns**

    a fresh instruction for the inverse

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – if the instruction is not composite and an inverse has not been implemented for it.
  </Function>

  <span id="qiskit-circuit-classicalfunction-booleanexpression-is-parameterized" />

  ### is\_parameterized

  <Function id="qiskit.circuit.classicalfunction.BooleanExpression.is_parameterized" signature="BooleanExpression.is_parameterized()">
    Return True .IFF. instruction is parameterized else False
  </Function>

  <span id="qiskit-circuit-classicalfunction-booleanexpression-mirror" />

  ### mirror

  <Function id="qiskit.circuit.classicalfunction.BooleanExpression.mirror" signature="BooleanExpression.mirror()">
    DEPRECATED: use instruction.reverse\_ops().

    **Returns**

    **a new instruction with sub-instructions**

    reversed.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="qiskit-circuit-classicalfunction-booleanexpression-power" />

  ### power

  <Function id="qiskit.circuit.classicalfunction.BooleanExpression.power" signature="BooleanExpression.power(exponent)">
    Creates a unitary gate as gate^exponent.

    **Parameters**

    **exponent** (*float*) – Gate^exponent

    **Returns**

    To which to\_matrix is self.to\_matrix^exponent.

    **Return type**

    [qiskit.extensions.UnitaryGate](qiskit.extensions.UnitaryGate "qiskit.extensions.UnitaryGate")

    **Raises**

    **CircuitError** – If Gate is not unitary
  </Function>

  <span id="qiskit-circuit-classicalfunction-booleanexpression-qasm" />

  ### qasm

  <Function id="qiskit.circuit.classicalfunction.BooleanExpression.qasm" signature="BooleanExpression.qasm()">
    Return a default OpenQASM string for the instruction.

    Derived instructions may override this to print in a different format (e.g. measure q\[0] -> c\[0];).
  </Function>

  <span id="qiskit-circuit-classicalfunction-booleanexpression-repeat" />

  ### repeat

  <Function id="qiskit.circuit.classicalfunction.BooleanExpression.repeat" signature="BooleanExpression.repeat(n)">
    Creates an instruction with gate repeated n amount of times.

    **Parameters**

    **n** (*int*) – Number of times to repeat the instruction

    **Returns**

    Containing the definition.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – If n \< 1.
  </Function>

  <span id="qiskit-circuit-classicalfunction-booleanexpression-reverse-ops" />

  ### reverse\_ops

  <Function id="qiskit.circuit.classicalfunction.BooleanExpression.reverse_ops" signature="BooleanExpression.reverse_ops()">
    For a composite instruction, reverse the order of sub-instructions.

    This is done by recursively reversing all sub-instructions. It does not invert any gate.

    **Returns**

    **a new instruction with**

    sub-instructions reversed.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="qiskit-circuit-classicalfunction-booleanexpression-simulate" />

  ### simulate

  <Function id="qiskit.circuit.classicalfunction.BooleanExpression.simulate" signature="BooleanExpression.simulate(bitstring)">
    Evaluate the expression on a bitstring.

    This evaluation is done classically.

    **Parameters**

    **bitstring** (`str`) – The bitstring for which to evaluate.

    **Returns**

    result of the evaluation.

    **Return type**

    bool
  </Function>

  <span id="qiskit-circuit-classicalfunction-booleanexpression-soft-compare" />

  ### soft\_compare

  <Function id="qiskit.circuit.classicalfunction.BooleanExpression.soft_compare" signature="BooleanExpression.soft_compare(other)">
    Soft comparison between gates. Their names, number of qubits, and classical bit numbers must match. The number of parameters must match. Each parameter is compared. If one is a ParameterExpression then it is not taken into account.

    **Parameters**

    **other** (*instruction*) – other instruction.

    **Returns**

    are self and other equal up to parameter expressions.

    **Return type**

    bool
  </Function>

  <span id="qiskit-circuit-classicalfunction-booleanexpression-synth" />

  ### synth

  <Function id="qiskit.circuit.classicalfunction.BooleanExpression.synth" signature="BooleanExpression.synth(registerless=True, synthesizer=None)">
    Synthesis the logic network into a [`QuantumCircuit`](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit").

    **Parameters**

    *   **registerless** (`bool`) – Default `True`. If `False` uses the parameter names to create registers with those names. Otherwise, creates a circuit with a flat quantum register.
    *   **synthesizer** (`Optional`\[`Callable`\[\[`BooleanExpression`], `QuantumCircuit`]]) – A callable that takes self and returns a Tweedledum circuit.

    **Returns**

    A circuit implementing the logic network.

    **Return type**

    [QuantumCircuit](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")
  </Function>

  <span id="qiskit-circuit-classicalfunction-booleanexpression-to-matrix" />

  ### to\_matrix

  <Function id="qiskit.circuit.classicalfunction.BooleanExpression.to_matrix" signature="BooleanExpression.to_matrix()">
    Return a Numpy.array for the gate unitary matrix.

    **Returns**

    if the Gate subclass has a matrix definition.

    **Return type**

    np.ndarray

    **Raises**

    **CircuitError** – If a Gate subclass does not implement this method an exception will be raised when this base class method is called.
  </Function>

  <span id="qiskit-circuit-classicalfunction-booleanexpression-validate-parameter" />

  ### validate\_parameter

  <Function id="qiskit.circuit.classicalfunction.BooleanExpression.validate_parameter" signature="BooleanExpression.validate_parameter(parameter)">
    Gate parameters should be int, float, or ParameterExpression
  </Function>

  ## Attributes

  ### condition\_bits

  <Attribute id="qiskit.circuit.classicalfunction.BooleanExpression.condition_bits">
    Get Clbits in condition.

    **Return type**

    `List`\[`Clbit`]
  </Attribute>

  ### decompositions

  <Attribute id="qiskit.circuit.classicalfunction.BooleanExpression.decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  ### definition

  <Attribute id="qiskit.circuit.classicalfunction.BooleanExpression.definition">
    Return definition in terms of other basic gates.
  </Attribute>

  ### duration

  <Attribute id="qiskit.circuit.classicalfunction.BooleanExpression.duration">
    Get the duration.
  </Attribute>

  ### label

  <Attribute id="qiskit.circuit.classicalfunction.BooleanExpression.label">
    Return instruction label

    **Return type**

    `str`
  </Attribute>

  ### params

  <Attribute id="qiskit.circuit.classicalfunction.BooleanExpression.params">
    return instruction params.
  </Attribute>

  ### unit

  <Attribute id="qiskit.circuit.classicalfunction.BooleanExpression.unit">
    Get the time unit of duration.
  </Attribute>
</Class>

